assets/scss/main.scss
/* ... */
.pf-v6-x-u-nowrap {
  white-space: nowrap;
  overflow-x: auto;
}

.lastcommit {
  flex: 1;
  width: calc(100%);

  @media screen and (min-width: 768px) {
    width: calc(100% - 100px);
  }

  .pf-v6-c-code-block__actions-item {
    padding-left: 0 !important;
  }

  .pf-v6-c-code-block__content {
    padding: var(--pf-t--global--spacer--200);
  }
}

.pf-v6-x-u-live {
  background: var(--pf-t--global--color--status--success--100);
  color: var(--pf-t--color--white);
}

.pf-v6-x-u-offline {
  background: var(--pf-t--global--color--status--danger--100);
  color: var(--pf-t--color--white);
}

.pf-v6-c-page__header-brand-link--no-decoration {
  color: var(--pf-t--color--black);

  @media (prefers-color-scheme: dark) {
    color: var(--pf-t--color--white);
  }

  text-decoration: none;
}

.pf-v6-c-avatar--navbar {
  width: 60px;
  height: 100%;
  object-fit: cover;
}

.pf-v6-x-m-no-highlight--dark {
  color: var(--pf-t--color--black);

  @media (prefers-color-scheme: dark) {
    color: var(--pf-t--color--white);
  }
}

.pf-v6-l-gallery--max-350 {
  --pf-v6-l-gallery--GridTemplateColumns--min: 350px;

  @media screen and (max-width: 412px) {
    --pf-v6-l-gallery--GridTemplateColumns--min: calc(100vw-48px);
  }
}

.pf-v6-l-gallery--max-500 {
  --pf-v6-l-gallery--GridTemplateColumns--min: 365px;

  @media screen and (max-width: 412px) {
    --pf-v6-l-gallery--GridTemplateColumns--min: calc(100vw-48px);
  }
}

.pf-v6-x-u-color-light-100 {
  color: var(--pf-t--color--white);
}

.pf-v6-x-u-color-light-200 {
  color: #f0f0f0; // We don't have grey tones in PatternFly v6 yet
}

.pf-v6-c-label--transparent {
  background: #fffffff5;
}

.pf-v6-x-u-no-shadow {
  box-shadow: none;
}

.pf-v6-x-u-overflow-x-auto {
  overflow-x: auto;
}

.pf-v6-x-u-white-space-nowrap {
  white-space: nowrap;
}

.streamstatus__channel__badge {
  height: 1.25rem;
  min-width: 10rem;
  object-fit: scale-down;
}

.pf-v6-x-u-navbar__title {
  @media screen and (max-width: 767px) {
    text-overflow: ellipsis;
    max-width: 12rem;
    white-space: nowrap;
    overflow-x: hidden;
  }
}

.pf-v6-c-button--header {
  color: var(--pf-t--color--black) !important;

  @media (prefers-color-scheme: dark) {
    color: var(--pf-t--color--white) !important;
  }
}

.pf-v6-c-menu {
  position: absolute !important;
  z-index: 20;
}

.pf-m-expanded > .pf-v6-c-menu-toggle::before,
.pf-m-expanded
  > .pf-v6-c-menu-toggle.pf-m-action
  .pf-v6-c-menu-toggle-button::before {
  border-color: var(--pf-t--color--black);

  @media (prefers-color-scheme: dark) {
    border-color: var(--pf-t--color--white);
  }

  border-bottom-width: 1px !important;
}

.pf-v6-x-u-text-shadow-sm {
  text-shadow: 0 0 4px var(--pf-t--color--white);

  @media (prefers-color-scheme: dark) {
    text-shadow: 0 0 4px var(--pf-t--color--black);
  }
}

@media (prefers-color-scheme: dark) {
  .pf-v6-x-u-text--freestanding {
    text-shadow: 0 0 4px var(--pf-t--color--black);
    color: var(--pf-t--color--white) !important;
    --pf-v6-c-button__icon--Color: var(--pf-t--color--white) !important;
  }
}

@media (prefers-color-scheme: dark) {
  .pf-v6-x-u-icon--freestanding {
    --pf-v6-c-button__icon--Color: var(--pf-t--color--white) !important;
  }
}

.pf-v6-c-card__header-main__img {
  border-top-left-radius: var(--pf-t--global--border--radius--medium);
  border-top-right-radius: var(--pf-t--global--border--radius--medium);
}

.pf-v6-x-c-article__header {
  @media screen and (min-width: 992px) {
    border-top-right-radius: var(--pf-t--global--border--radius--medium);
  }

  @media screen and (min-width: 1129px) {
    border-top-left-radius: var(--pf-t--global--border--radius--medium);
  }
}

.pf-v6-c-card--full-width {
  @media screen and (max-width: 991px) {
    border-radius: 0;

    &::before {
      border-left-width: 0;
      border-right-width: 0;
    }
  }
}

.pf-v6-c-card--full-width-lg {
  @media screen and (max-width: 1199px) {
    border-radius: 0;

    &::before {
      border-left-width: 0;
      border-right-width: 0;
    }
  }
}

.pf-v6-c-card--articles {
  @media screen and (max-width: 1128px) {
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;

    &::before {
      border-left-width: 0;
    }
  }
}

.pf-v6-c-section--articles > .pf-v6-c-card,
.pf-v6-c-card--see-also,
.pf-v6-c-grid--tweets > .pf-v6-c-card {
  @media screen and (max-width: 1128px) {
    border-top-right-radius: 0 !important;
    border-bottom-right-radius: 0;

    &::before {
      border-right-width: 0;
    }
  }
}

.pf-v6-c-card--lastcommit {
  @media screen and (max-width: 760px) {
    border-radius: 0;

    &::before {
      border-left-width: 0;
      border-right-width: 0;
    }
  }

  overflow-y: hidden;
}

.pf-v6-c-card--transparent {
  @extend .pf-v6-x-u-blur;

  background: rgba(255, 255, 255, 0.5) !important;

  @media (prefers-color-scheme: dark) {
    background: rgba(41, 41, 41, 0.5) !important;
  }

  > .pf-v6-c-card__title {
    @extend .pf-v6-x-u-text-shadow-sm;
  }
}

.pf-v6-c-page__main--index {
  position: absolute;
  width: 100%;
}

.pf-v6-c-card__title > h2 {
  font-weight: var(--pf-v6-c-card__title--FontWeight) !important;
}

.pf-v6-u-color-100 {
  color: #232323; // We don't have grey tones in PatternFly v6 yet

  @media (prefers-color-scheme: dark) {
    color: #dcdcdc; // We don't have grey tones in PatternFly v6 yet
  }
}

.pf-v6-u-color-200 {
  color: #414141; // We don't have grey tones in PatternFly v6 yet

  @media (prefers-color-scheme: dark) {
    color: #bebebe; // We don't have grey tones in PatternFly v6 yet
  }
}

.fireworks,
.snowflakes,
.rainfall {
  @extend .pf-v6-c-page__main--with-overlay;

  width: 100% !important;
  height: 100% !important;
  position: fixed !important;
  padding-top: 0 !important;
  z-index: 100 !important;
}

.fireworks ~ .snowflakes,
.fireworks ~ .rainfall,
.snowflakes ~ .rainfall {
  background: transparent !important;
}
/* ... */

